tests/baselines/reference/_caxnc-propNarrow-0002.errors.txt
tests/cases/conformance/_caxnc-prop/_caxnc-propNarrow-0002.ts(13,7): error TS2339: Property 'b' does not exist on type '{ readonly a: 1; }'.


==== tests/cases/conformance/_caxnc-prop/_caxnc-propNarrow-0002.ts (1 errors) ====
    declare const x: boolean;
    
    // @ts-dev-expect-string "count: 0, effectiveDeclaredTsType: { readonly a: 1; } | { readonly a: 2; readonly b: 2; }"
    let r = x ? { a: 1 } as const : { a: 2, b:2 } as const ;
    if (r.b){
        r; // expect { readonly a: 2; readonly b: 2; }
        r.a; // expect 2
        r.b; // expect 2
    }
    else {
        r; // expect { readonly a: 1; }
        r.a; // expect 1
        r.b; // expect any (error)
          ~
!!! error TS2339: Property 'b' does not exist on type '{ readonly a: 1; }'.
    }
    